Finally update to Java 11.